[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adapt-iq-common"
version = "1.0.0"
description = "Common Repo for Adapt IQ"
authors = [{ name = "Hemanth Kumar Pasham', email = 'hemanthkumarpasham9502@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "fastapi",
    "python-dotenv",
    "pydantic[email]",
    "pydantic-settings",
    "PyJWT",
    "bcrypt",
    "pymongo",
    "redis",
    "cryptography",
]

[tool.ruff]
line-length = 88  # Customize line length
target-version = "py311"  # Adjust to your Python version

[tool.ruff.format]
quote-style = "double"  # Use double quotes
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "W"]  # Example: Enable error (E), flake8 (F), bugbear (B), warnings (W)
ignore = ["E501", "S608"]  # Ignore line length warnings (Black handles this)

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false  # Keep string quotes consistent


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["adapt_iq_common", "adapt_iq_common.*"]
